# Data_Science_AI

./: .gitignore  01_AlgaeParc.ipynb  03_Modular_Arithmatic.ipynb  Cleaning_data.ipynb  Data_Science_Ammar.code-workspace  Drip & Drown_G5.xlsx  HPLC_graphs.ipynb  Light_Temp_Leptolyngbya_article data.xlsx  Nabeel_Bar_plot.ipynb  Plotly_Color.ipynb  Progress.md  README.md  builtin-colorscales.py  paramter_pigments.ipynb
.ipynb_checkpoints/: 01_AlgaeParc-checkpoint.ipynb  03_Modular_Arithmatic-checkpoint.ipynb  Mishal_Nadeem-checkpoint.ipynb  Nabeel_Bar_plot-checkpoint.ipynb  Plotly_Color-checkpoint.ipynb  paramter_pigments-checkpoint.ipynb
01_Jeronimo_Lab/: 01_Image_detection_tool.ipynb  hemocytometer_counts.csv  hemocytometer_viability.csv
ANOVA_Stat/: 0BFE93A0  3_wayanova_results.xlsx  ANOVA.ipynb  Mean and repliicate data.xlsx  all_responses_anova_results.xlsx  anova_results.xlsx  crd_anova_results.xlsx  dummy_4way_anova_data.xlsx  dummy_crd.xlsx  dummy_fourway.xlsx  dummy_latin_square.xlsx  dummy_oneway.xlsx  dummy_rcbd.xlsx  dummy_rcbd_data.xlsx  dummy_splitblock.xlsx  dummy_splitplot.xlsx  dummy_splitplot_latin_square.xlsx  dummy_splitsplit.xlsx  dummy_stripsplit.xlsx  dummy_threeway.xlsx  dummy_twoway.xlsx  four-way_anova_results.xlsx  latin_square_anova_results.xlsx  rcbd_anova_results.xlsx  split-block_anova_results.xlsx  (+6 more)
Python_bootcamp/: datatingestion.py  day_1.ipynb  example.txt  exception.py  main.py  projectstructure.py  pyproject.toml  requirements.txt  setup.py
Python_bootcamp/src/exception/: exception.py
Python_bootcamp/src/logging/: logger.py
(+644 files in other folders)
